5-install-ingress-controller/test/03-echo2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo2
  namespace: test
spec:
  selector:
    matchLabels:
      app: echo2
  replicas: 1
  template:
    metadata:
      labels:
        app: echo2
    spec:
      containers:
      - name: echo2
        image: hashicorp/http-echo
        args:
        - "-text=echo2"
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "100m"  
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo2
  namespace: test
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: echo2      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo2
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: echo2.flaviolrita.local
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo2
            port:
              number: 80
